--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,10 +9,10 @@ services:
       - ./db/pgdata:/var/lib/postgresql/data
       - ./db/initdb.d:/docker-entrypoint-initdb.d
     environment:
-      - POSTGRES_MULTIPLE_DATABASES=provider,resource-one,resource-two
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      POSTGRES_MULTIPLE_DATABASES: provider,resource-one,resource-two
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
   provider:
     build:
       context: ./provider
