--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+click==8.1.3
 flake8==5.0.4
 flake8-broken-line==0.6.0
 flake8-builtins==2.0.0
@@ -7,3 +8,4 @@ flake8-print==5.0.0
 flake8-quotes==3.3.1
 isort==5.10.1
 pep8-naming==0.13.2
+sarge==0.1.7.post1
